welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:3: error: '{' expected but 'case' found.
case (_, _, true) => return false
^answerCell:4: error: '}' expected but 'case' found.
case (true,true,false) => return true
^answerCell:5: error: illegal start of definition
case (_, _, _) => return true
^answerCell:7: error: eof expected but '}' found.
 }
 ^