welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
(isMorning, isMom, isAsleep) match
case (_, _, true) => return false
case (true,true,false) => return true
case (_, _, _) => return true
}